2007-10-16  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/reader.R (readDOC): Added MS Word reader (using antiword).

2007-10-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/weight.R: Weighting functions for TermDocMatrix.

2007-10-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (dimnames, colnames, rownames): Wrapper
	functions for accessing dimension, column, and row names.

	* R/plot.R (plot.TermDocMatrix): Plot correlations between terms.

2007-09-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/removePunctuation.Rd: Added documentation. Function also exported to NAMESPACE.

2007-08-28  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/fungen.R: Use S4 class for function generators instead of S3 attributes.

2007-07-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/reader.R (readPDF): Removed manual checks for pdftotext and
	pdfinfo. The system call gives a warning anyway.

2007-07-28  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (asPlain): Conversion from
	StructuredTextDocuments to PlainTextDocuments.

2007-07-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R: Added convenience methods ("[", nrow, ncol)
	for accessing term-document matrices.

	* inst/doc/tm.Rnw: readPDF is only called if pdftotext and pdfinfo
	are installed.

2007-07-17  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (TermDocMatrix): Improved efficiency. Kudos to
	Christian Buchta.

2007-07-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/doc/tm.Rnw: Update vignette (readPDF, readHTML, preprocessReut21578XML).

2007-07-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/reader.R (readHTML): Added very simple HTML reader to obtain StructuredTextDocuments.

	* R/reader.R (readPDF): Added PDF reader.

2007-07-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* DESCRIPTION: Moved proxy from Depends to Imports to avoid name clashes.

	* inst/stopwords/english.dat: Added the term "yes" to stopwords.
