@@ -19,6 +19,7 @@ export(
        "sFilter",
        "preprocessReut21578XML",
        "stopwords",
+       "termFreq",
        "weightTf",
        "weightTfIdf",
        "weightBin",
@@ -31,6 +32,7 @@ exportMethods(
               "TextDocCol",
               "TextRepository",
               "TermDocMatrix",
+              "TermDocMatrix2",
               "Dictionary",
               "DirSource",
               "CSVSource",
