@@ -1,3 +1,10 @@
+2007-10-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/termdocmatrix.R (TermDocMatrix2): New modular
+	constructor.
+
+	* NAMESPACE: Exported termFreq.
+
 2007-10-16  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/reader.R (readDOC): Added MS Word reader (using antiword).
